some more more changes

--- a/mod2_solutions/index.html
+++ b/mod2_solutions/index.html
@@ -11,7 +11,7 @@
 	<div class="container">
 		<div class="col-lg-4 col-md-6 col-sm-12">
 			<div>
-			<h2>Chicken</h2>
+			<h2 id="Chicken">Chicken</h2>
 			<div>
 				lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -22,7 +22,7 @@
 		</div>
 		<div class="col-lg-4 col-md-6 col col-sm-12">
 			<div>
-			<h2>Beef</h2>
+			<h2 id="Beef">Beef</h2>
 			<div>lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -31,7 +31,7 @@
 		</div>
 		<div class="col-lg-4 col-md-12 col-sm-12">
 			<div>
-			<h2>Sushi</h2>
+			<h2 id="Sushi">Sushi</h2>
 			<div>lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
