--- a/mod2_solutions/index.html
+++ b/mod2_solutions/index.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="main.css">
+	<link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet"> 
 </head>
 <body>
 	<h1>Our Menu</h1>
@@ -39,6 +40,14 @@
 			</div>
 		</div>
 		</div>
+	</div>
+	<div class="image">
+		<a href="https://goo.gl/maps/PcLpWbaDiqJ4UetbA">
+			<div>
+				<iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d7403.96503385487!2d75.944145!3d21.896749!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1596932684767!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+			</div>
+		</a>
+		
 	</div>
 </body>
 </html>
