--- a/mod3_solutions/index3.html
+++ b/mod3_solutions/index3.html
@@ -15,7 +15,7 @@
   	<h1 class="navbar-brand">
   		Food, LLC
   	</h1>
-  <button type="button" class="btn btn-primary d-md-none" data-toggle="collapse" data-target="#demo"><img src="icon.png"></button>
+  <button type="button" class="btn btn-dark btn-sm d-md-none" data-toggle="collapse" data-target="#demo"><img src="icon.png"></button>
   <div id="demo" class="collapse">
     <div>
     	<a href="#c"><h4 id="Chicken" class="text-center">Chicken</h4></a>
